--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.7
+  connectivity_plus: ^6.1.4
+  dio: ^5.8.0+1
+  dio_http2_adapter: ^2.6.0
+  dio_smart_retry: ^7.0.1
+  uuid: ^4.5.1
+  intl: ^0.20.2
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
