--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,21 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   get_it: ^8.0.3
+  flutter_dotenv: ^5.2.1
+  json_annotation: ^4.9.0
+  async: ^2.11.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
