--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   dio_http2_adapter: ^2.6.0
   dio_smart_retry: ^7.0.1
   uuid: ^4.5.1
-  intl: ^0.20.2
+  intl: any
   get_it: ^8.0.3
   flutter_dotenv: ^5.2.1
   json_annotation: ^4.9.0
@@ -23,6 +23,8 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   provider: ^6.1.4
+  flutter_localizations:
+    sdk: flutter
 
 
 dev_dependencies:
@@ -34,5 +36,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - .env
