--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
     sdk: flutter
   geolocator: ^14.0.0
   geocoding: ^3.0.0
+  fluttertoast: ^8.2.12
+  go_router: ^15.1.1
+  cached_network_image: ^3.4.1
 
 
 dev_dependencies:
