--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   fluttertoast: ^8.2.12
   go_router: ^15.1.1
   cached_network_image: ^3.4.1
+  hive: ^2.2.3
+  path_provider: ^2.1.5
 
 
 dev_dependencies:
