--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^3.4.1
   hive: ^2.2.3
   path_provider: ^2.1.5
+  flutter_material_pickers: ^3.7.0
 
 
 dev_dependencies:
