--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   cached_network_image: ^3.4.1
   hive: ^2.2.3
   path_provider: ^2.1.5
-  flutter_material_pickers: ^3.7.0
+  flutter_material_pickers:
+    git:
+      url: https://github.com/codegrue/flutter_material_pickers
+      ref: master
 
 
 dev_dependencies:
